hphp/hack/test/typecheck/await_in_expressions2.php
<?hh

async function f1(Awaitable<int> $a): Awaitable<void> {
  $x = 1;
  $b = ($x = await $a);
}
